fixed spacing on basic page question cards

--- a/src/pages/CSS/basicPage.css
+++ b/src/pages/CSS/basicPage.css
@@ -23,23 +23,20 @@
 }
 
 .question {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     width: 20%;
     border: 1px solid grey;
-    /* padding: 15px 5px; */
     border-radius: 5px;
     box-shadow: 10px 5px 5px rgb(21, 21, 21);
-    /* color: black; */
 }
 
 .QuestionNum {
     font-size: 22px;
-    margin-left: 6px;
-    margin-top: 12px;
-    /* position: aboslute; */
+    margin-left: 12px;
+    margin-top: 2px;
+}
 
+.radio-container {
+    margin: 20px 8px 8px 12px;
 }
 
 .stack {
